--- a/templates/view_all_order.html
+++ b/templates/view_all_order.html
@@ -28,6 +28,7 @@
             <a href="{{ url_for('logout') }}" class="block py-2 px-4 hover:bg-gray-700 rounded">Logout</a>
         </div>
     </div>
+    <h1>{{ msg }}</h1>
 
     <!-- Sidebar Overlay -->
     <div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden"></div>
