--- a/templates/view_products.html
+++ b/templates/view_products.html
@@ -29,17 +29,21 @@
         </div>
     </div>
 
+
     <!-- Sidebar Overlay -->
     <div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden"></div>
 
     <!-- Main Content -->
     <div class="ml-0 md:ml-64 transition-all duration-300 ease-in-out p-8" id="main-content">
+
         <button id="toggle-btn" class="absolute top-5 left-5 z-10 text-white bg-gray-800 p-3 rounded-md md:hidden">
             <i class="fas fa-bars"></i>
         </button>
 
         <div class="container mx-auto">
-            <h1 class="text-3xl font-bold text-center mb-6">My Products</h1>
+            <h1 class="text-3xl font-bold text-center mb-6">My Products</h1><br>
+            <h1>{{ msg }}</h1>
+
         {% for product in products %}
             <div class="bg-white p-6 rounded-lg shadow-lg transition duration-300 hover:scale-105 flex flex-col items-center justify-between border border-gray-200 hover:shadow-2xl transform hover:translate-y-1">
     <!-- Product Image -->
